log
Sun 21 Aug 2022 02:30:49 AM UTC: 
 tests:  0|6
total_score: 0/70
978e638
Sun 21 Aug 2022 02:36:16 AM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
f7e54f3
Sun 21 Aug 2022 02:44:42 AM UTC: 
 list.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  0|0
b7e88b8
Sun 21 Aug 2022 02:46:47 AM UTC: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|0
58e5388
Sun 21 Aug 2022 02:48:42 AM UTC: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:46:5: error: expected expression before ‘int’
   46 |     int * dato;
      |     ^~~
list.c:45:3: error: this ‘else’ clause does not guard... [-Werror=misleading-indentation]
   45 |   else
      |   ^~~~
list.c:47:5: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘else’
   47 |     dato=nodo->data;
      |     ^~~~
list.c:47:5: error: ‘dato’ undeclared (first use in this function)
list.c:47:5: note: each undeclared identifier is reported only once for each function it appears in
list.c:49:1: error: control reaches end of non-void function [-Werror=return-type]
   49 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
4fb19c8
Sun 21 Aug 2022 02:49:05 AM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
3a715e9
Sun 21 Aug 2022 02:55:45 AM UTC: 
 list.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  0|0
0863588
